<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/light_gray"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/rlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pale_blue"
        android:padding="16dp" >

        <TextView
            android:id="@+id/txtHeroText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/blue"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTagText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtHeroText"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:text="Super simple password storage." />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlLayout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp" >

            <TextView
                android:id="@+id/txtBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvPIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login" />

            <EditText
                android:id="@+id/etPIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="numberPassword" />

            <TextView
                android:id="@+id/tvConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/confirm_pin" />

            <EditText
                android:id="@+id/etConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="numberPassword" >
            </EditText>

            <Button
                android:id="@+id/btnForgot"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/link"
                android:text="I forgot my PIN."
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/selector_button_blue"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>