<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textStyle="italic|bold"
                    android:text="Your Passbook directory:" />

                <TextView
                    android:id="@+id/txtPath"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="&lt;Tap Import XML to generate&gt;" />

                <Button
                    android:id="@+id/btnImport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_button_blue"
                    android:text="@string/import_xml"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnExport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_button_blue"
                    android:text="@string/export_xml"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_button_blue"
                    android:text="@string/share_plain_text"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:layout_gravity="center"
                    android:textStyle="italic"
                    android:text="This is a beta feature." />

                <Button
                    android:id="@+id/btnDisclaimer"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/link"
                    android:text="Click here to read instructions."
                    android:textSize="12sp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>